app-book/app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: will-ui
spec:
  ports:
  - port: 8888
    targetPort: 8888
  selector:
    app: will-ui
