app-book/willapp-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: will-ui
spec:
  rules:
    - host: will.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: will-ui
                port:
                  number: 8888
